--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
         <title>Bedrock Tools</title>
     </head>
     <body>
-        <h1>ELECTRON PAPÁ</h1>
+        <h1>Bedrock Tools</h1>
     </body>
 </html>
