--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <title>Bedrock Tools</title>
     </head>
     <body>
-        <h1>Bedrock Tools</h1>
+        <h1>Test</h1>
     </body>
+    <link rel="stylesheet" href="style.css">
 </html>
